--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>my stretch was procrastination. I feel that while my stretch has improved, it still has kind of remained constant. I think I should start earlier on my long term homework projects. I should maintain a regular and specific schedule.  </p>
         <h2>My SMART Goal</h2>
         <p>My SMART goal is to put more effort into science fair, and all projects in general. I have chosen a better science fair project this year, making me more motivated to work on it. </p>
-        <h2>Reflaction Questions</h2><p>Do you feel your stretch is still a stretch? Or is it becoming more of a strength? Please give an example.</p>
+        <h2>Reflection Questions</h2><p>Do you feel your stretch is still a stretch? Or is it becoming more of a strength? Please give an example.</p>
 <p>Yes, although I feel it is getting better. For example, instead of starting at night on my homework, I start after I get home.</p>
 
 
