--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
            <a href="Literature.html">Literature Artifact</a>
            <a href="Math.html">Math Artifact</a>
            <a href="Extracurricular.html">Extracurricular Artifact</a>
+           <a href="Tech.html">Tech Page</a>
       <link rel="stylesheet" href="style.css">
       <h1>Sania's (cough)not sarcastic at all(cough)Website!</h1>
     
