--- a/Extracurricular.html
+++ b/Extracurricular.html
@@ -7,6 +7,7 @@
            <a href="Literature.html">Literature Artifact</a>
            <a href="Math.html">Math Artifact</a>
            <a href="Extracurricular.html">Extracurricular Artifact</a>
+           <a href="Tech.html">Tech Page</a>
       <link rel="stylesheet" href="style.css">
    
            <body> <p>My extracurricular activity/ artifact is dance. In July, we went to natinonals and got second place in our division. We were the first group to get a platinum on our first try. We are going to preform two dances soon. One new one, and the other one is the one we used for the nationals preformance. </p></body>
