--- a/History.html
+++ b/History.html
@@ -7,6 +7,7 @@
            <a href="Literature.html">Literature Artifact</a>
            <a href="Math.html">Math Artifact</a>
            <a href="Extracurricular.html">Extracurricular Artifact</a>
+               <a href="Tech.html">Tech Page</a>
       <link rel="stylesheet" href="style.css">
 
   </head>
