--- a/Extracurricular.html
+++ b/Extracurricular.html
@@ -11,4 +11,4 @@
       <link rel="stylesheet" href="style.css">
    
            <body> <p>My extracurricular activity/ artifact is dance. In July, we went to natinonals and got second place in our division. We were the first group to get a platinum on our first try. We are going to preform two dances soon. One new one, and the other one is the one we used for the nationals preformance. </p></body>
-             <img src="images/Trophy.png" alt="The Trophy We Got" height="30%" width="20%">
+             <img class=center src="images/Trophy.png" alt="The Trophy We Got" height="30%" width="20%">
