--- a/History.html
+++ b/History.html
@@ -16,5 +16,5 @@
     
   </body>
 </html>
- <img src="images/Congress.jpg" alt="Battle of Yorktown" height="50%" width="40%">
- <img src="images/Yorktown.jpg" alt="First Continental Congress" height="50%" width="40%">
+ <img class=center src="images/Congress.jpg" alt="Battle of Yorktown" height="50%" width="40%">
+ <img class=center src="images/Yorktown.jpg" alt="First Continental Congress" height="50%" width="40%">
