--- a/Math.html
+++ b/Math.html
@@ -11,4 +11,4 @@
   </head>
   <body>
       <p>My math notes are very organized. they help me a lot on tests and homework assignments. On this particular lesson, we are learning how to facter. I highlighted the important parts, like the factoring checklist.</p>
-      <img src="images/IMG_4022.JPG" alt="Math Notes" height="50%" width="40%">
+      <img class=center src="images/IMG_4022.JPG" alt="Math Notes" height="50%" width="40%">
