--- a/Tech.html
+++ b/Tech.html
@@ -9,4 +9,4 @@
            <a href="Extracurricular.html">Extracurricular Artifact</a>
       <link rel="stylesheet" href="style.css">
            <body><p>This is my tech page. In tech, we were working on Sketchup. My partner and I created a catupult. </p></body>
-            <img src="images/Tech.png" alt="Tech" height="50%" width="40%">
+            <img class=center src="images/Tech.png" alt="Tech" height="50%" width="40%">
