--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
            <a href="Extracurricular.html">Extracurricular Artifact</a>
            <a href="Tech.html">Tech Page</a>
       <link rel="stylesheet" href="style.css">
-      <h1>Sania's (cough)not sarcastic at all(cough)Website!</h1>
+      <h1>My Website</h1>
     
            <h2>My Strength</h2
               >
