--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
         <p>my stretch was procrastination. I feel that while my stretch has improved, it still has kind of remained constant. I think I should start earlier on my long term homework projects. I should maintain a regular and specific schedule.  </p>
         <h2>My SMART Goal</h2>
         <p>My SMART goal is to put more effort into science fair, and all projects in general. I have chosen a better science fair project this year, making me more motivated to work on it. </p>
-        <h2>Reflection Questions</h2><p>Do you feel your stretch is still a stretch? Or is it becoming more of a strength? Please give an example.</p>
+        <h2>Reflection Questions</h2><h3>Do you feel your stretch is still a stretch? Or is it becoming more of a strength? Please give an example.</h3>
 <p>Yes, although I feel it is getting better. For example, instead of starting at night on my homework, I start after I get home.</p>
 
 
-<p>Give an example of a project, assignment, or moment when you feel you used your strength effectively. Explain.</p>
+<h3>Give an example of a project, assignment, or moment when you feel you used your strength effectively. Explain.</h3>
         <p>I think I used my strength effectively on my notes for math.</p>
 
 
-<p>How broad is your friend group? Are peers easily accepted? What have you done/can you do to improve the social atmosphere?</p>
+<h3>How broad is your friend group? Are peers easily accepted? What have you done/can you do to improve the social atmosphere?</h3>
 <p>Pretty broad. Yes, at the beginning of the year, it was only four people. It now consists of nine people.</p>
 
 
-        <p>What kinds of leadership roles have you assumed this year? How have you grown as a leader?</p>
+        <h3>What kinds of leadership roles have you assumed this year? How have you grown as a leader?</h3>
 <p>I have run for student council. I choreographed our group for open mic night. I think I have grown as a leader this year.</p>
 
 
-<p>Are you consistent with completing work on time? What is helping/hindering you? Think about assignments, projects and tests you’ve completed. What are you most proud of? What pieces reflect effort and resilience? Which habits of mind are easily identifiable in these pieces?</p>
-    <p>I am not always consistent about completing work on time. It is because I procrastinate. I am proud of my timeline project because I don’t think I procrastinated.</p>
+<h3>Are you consistent with completing work on time? What is helping/hindering you? Think about assignments, projects and tests you’ve completed. What are you most proud of? What pieces reflect effort and resilience? Which habits of mind are easily identifiable in these pieces?</h3>
+    <p>I am not always consistent about completing work on time. It is mostly because I forget to turn them in on time. I usually have them done on time though. I am proud of my timeline project because I don’t think I procrastinated.</p>
 
 
-<p>Make a list of assignments, projects, etc. that you’ve completed so far and would like to include in your portfolio.</p>
+<h3>Make a list of assignments, projects, etc. that you’ve completed so far and would like to include in your portfolio.</h3>
 <p>Timeline project
 Choreography for theater 
 Teaching people stuff for open mic night</p>
