--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 
 <h3>Make a list of assignments, projects, etc. that you’ve completed so far and would like to include in your portfolio.</h3>
-<p>Timeline project
-Choreography for theater 
-Teaching people stuff for open mic night</p>
+<p>Timeline project, 
+Choreography for theater, 
+Teaching people stuff for open mic night.</p>
         
         
  </body>
