--- a/History.html
+++ b/History.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-   <p> My history artifact is my timeline project. For my timeline project, I was assigned the Battle of Yorktown and the First Continental Congress. In the Battle or Yorktown I discribed how the Americans won the Revolution and the struggles they faced. In the First Continental Congress, I wrote about why it was formed, and the purpose it served. I think I tried hard on this project. I put in a lot of effort.</p>
+   <p> My history artifact is my timeline project. For my timeline project, I was assigned the Battle of Yorktown and the First Continental Congress. In the Battle or Yorktown I discribed how the Americans won the Revolution and the struggles they faced. For the First Continental Congress, I wrote about why it was formed, and the purpose it served. I think I tried hard on this project. I put in a lot of effort.</p>
     
   </body>
 </html>
